:pencil2:删除重复内容、添加标注

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -56,7 +56,7 @@
 
 19.摩擦生热属于**因果联系**，而电闪雷鸣不属于。
 
-20.一个事物只要合乎发展的必然性迟早会变成现实
+20.一个事物只要合乎发展的必然性**迟早会变成现实**
 
 21.“既要注重总体谋划，又要注重牵住‘牛鼻子’”，这句话体现了：要**坚持两点论和重点论的统一**。
 
@@ -64,7 +64,7 @@
 
 02.**主观唯心主义**：我思故我在、存在就是被感知、万物皆备于我、**物是感觉的复合**、**世界是观念的集合**
 
-03.**客观唯心主义**：世界是绝对观念的外化、世界是上帝意志的创造物
+03.**客观唯心主义**：世界是**绝对观念**的外化、世界是**上帝意志**的创造物
 
 04.**形而上学唯物主义物质观**的**缺陷**：
 
@@ -145,7 +145,7 @@
 
 020.**任何现象都从一定的方面表现着本质**，现象是本质的外在表现，即使**假象也是本质的表现**。
 
-021.本质只有通过理性思维才能把握，**现象**是**多变易逝**的，**本质**是**相对稳定**的。
+021.**本质**只有通过**理性思维**才能把握，**现象**是**多变易逝**的，**本质**是**相对稳定**的。
 
 022.**现象**有**真像**和**假象**之分，**假象**与**错觉**不是一回事。
 
@@ -243,9 +243,9 @@
 
 045.**知识性认识**以客观事物及其规律为对象，以客体本身的属性、关系和发展过程为反映内容，追求客体“是什么”，以追求**“真”**为**认识目的**；
 
-046.**价值评价**以主客体之间的价值关系为认识对象，主体的意向、愿望和要求包含在其中，追求“应该怎样”，以求**“善”和“美”**为**认识目的**；由于是主体以自身需求作为内在尺度运用于所评价的客体，因此，评价的差异性无法避免。
+046.**价值评价**以主客体之间的价值关系为认识对象，主体的意向、愿望和要求包含在其中，追求“应该怎样”，以求**“善”和“美”**为**认识目的**；
 
-047.价值评价结果**有正确与错误之分**，价值评价也有**科学与非科学之别**。
+047.由于是主体以自身需求作为内在尺度运用于所评价的客体，因此，评价的差异性无法避免。
 
 048.价值评价要**以真理为根据**，要**有利于人类主体的生存和发展**。
 
@@ -273,7 +273,7 @@
 
 39.**社会的发展和进步**集中表现为**社会形态的更替**。
 
-社会形态更替归根结底是**社会基本矛盾运动**的结果，其中具有最终决定意义的是**生产力的发展**。
+**社会形态**更替归根结底是**社会基本矛盾运动**的结果，其中具有最终决定意义的是**生产力的发展**。
 
 **人民群众**是社会形态更替的**决定性力量**。
 
