:memo:增添新内容

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -16,7 +16,7 @@
 
 6.**工人阶级的圣经**——**《资本论》**
 
-7.**人民性**是马克思主义的**本质属性**
+7.**人民性**是马克思主义的**本质属性**；**人民性、实践性和发展性**集中地体现为**革命性**。
 
 8.马克思主义的基本特征，一句话概况就是：**科学性和革命性**的统一
 
@@ -89,7 +89,7 @@
 
 （注意，只有客观存在才能反映，所以不能说鬼神观念是人脑对鬼神的虚幻反映）
 
-08.人类改造世界的实践活动，使世界发生了二重分化，即：
+08.人类改造世界的实践活动，使世界发生了**二重分化**，即：
 
 1. 从自然界中分化出人类社会
 
@@ -107,7 +107,7 @@
 
 012.**解决矛盾的形式**有：
 
-* ①矛盾双方同归于尽
+* ①矛盾双方**同归于尽**
 * ②矛盾一方克服另一方
 * ③矛盾双方形成协同运动的新形式
 * ④矛盾双方**融合**成一个新事物（注意不可以换成**调和**，调和论否认对立双方的斗争，也就否认了事物发展）
@@ -485,9 +485,9 @@
 
 068.**价值规律的作用**表现在：
 
-* ①自发地调节生产资料和劳动力在社会各部生产部门之间的分配比例
-* ②自发地刺激社会生产力的发展
-* ③自发地调节社会收入的分配
+* ①自发地**调节生产资料和劳动力在社会各部生产部门之间的分配比例**
+* ②自发地**刺激社会生产力的发展**
+* ③自发地**调节社会收入的分配**
 
 069.在**马克思之前**，古典政治经济学代表人物亚当·斯密已经认识到了**商品的二因素**，提出了**劳动创造价值的观点**。
 
@@ -853,11 +853,11 @@
 
 14.中国革命的：
 
-| 首要问题     | 分清敌友       |
-| ------------ | -------------- |
-| **基本问题** | **农民问题**   |
-| **核心问题** | **领导权问题** |
-| **主要内容** | **土地问题**   |
+| 首要问题                 | 分清敌友       |
+| ------------------------ | -------------- |
+| **基本问题**             | **农民问题**   |
+| **核心问题（中心问题）** | **领导权问题** |
+| **主要内容**             | **土地问题**   |
 
 15.**没收封建地主阶级的土地归农民所有**，是新民主主义经济纲领的三项内容之一，是**新民主主义革命**的**主要内容**。
 
