:memo:知识点整合

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -4,17 +4,27 @@
 
 ### 导论
 
-1.马克思、恩格斯完成了从唯心主义向唯物主义，从革命民主主义向共产主义转变的是：**《德法年鉴》**上的论文
+1.马恩著作：
 
-2.为创立马克思主义**奠定思想前提**的是：马克思、恩格斯完成了从唯心主义向唯物主义，从革命民主主义向共产主义转变
+| 著作                             | 对应                                                         |
+| -------------------------------- | ------------------------------------------------------------ |
+| 《德意志的意识形态》             | 首次阐述了**历史唯物主义**的基本观点                         |
+| 《德法年鉴》上的论文             | 马克思、恩格斯完成了**从唯心主义向唯物主义，从革命民主主义向共产主义**转变 |
+| 《神圣家族》                     | 马克思、恩格斯的**第一次合作**                               |
+| 《反杜林论》                     | **全面阐述了马克思主义理论体系**，也是马克思主义的**百科全书** |
+| 《法兰西内战》、《哥达纲领批判》 | 前者**科学总结巴黎公社的历史经验和教训**，后者**丰富了科学社会主义学说** |
+| 《共产党宣言》的发表             | **标志着马克思主义公开问世**                                 |
+| 《资本论》                       | **工人阶级的圣经**                                           |
 
-3.马克思、恩格斯的**第一次合作**：**《神圣家族》**
+2.为**创立马克思主义奠定思想前提**的是：马克思、恩格斯完成了从唯心主义向唯物主义，从革命民主主义向共产主义转变
 
-4.**《德意志的意识形态》**首次阐述了**历史唯物主义**的基本观点
+3
 
-5.**《反杜林论》**全面阐述了马克思主义理论体系，也是马克思主义的**百科全书**。
+4.
 
-6.**工人阶级的圣经**——**《资本论》**
+5.
+
+6.
 
 7.**人民性**是马克思主义的**本质属性**；**人民性、实践性和发展性**集中地体现为**革命性**。
 
@@ -843,7 +853,7 @@
 
 10.在中国民主革命中，**无产阶级领导权的中心问题**是**农民问题**。
 
-11.农民问题乃**国民革命的中心问题**——毛泽东
+11.农民问题乃**国民革命(1925-1927)的中心问题**——毛泽东《国民革命与农民运动》
 
 12.“统帅革命的资产阶级，联合革命的无产阶级，实行资产阶级民主革命。”这一观点的**错误实质**在于**放弃无产阶级的领导权**，因为领导权问题是新、旧民主主义革命的**根本区别**。
 
