:memo:第三章-三大改造

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1007,7 +1007,13 @@
 | 对农业、手工业、资本主义工商业的改造 | 区别对象、积极引导、逐步过渡                       |
 | 经济建设方针                         | 党的八大提出，既反保守又反冒进，即在综合中稳步前进 |
 
-29.社会主义改造中，**高级农业生产合作社**在性质上相一致的手工业的社会主义改造形式是：**手工业生产合作社**
+29.对农业、个体手工业及资本主义工商业的社会主义改造：
+
+|                | 社会主义萌芽性质       | 半社会主义性质     | 完全的社会主义性质 | 采取方法     |
+| -------------- | ---------------------- | ------------------ | ------------------ | ------------ |
+| 农业           | 互助组                 | 初级农业生产合作社 | 高级农业生产合作社 | 合作化       |
+| 个体手工业     | 手工业供销小组         | 手工业供销合作社   | 手工业生产合作社   | 合作化       |
+| 资本主义工商业 | 初级形式的国家资本主义 | 个别企业的公私合营 | 全行业的公私合营   | 国家资本主义 |
 
 30.对资本主义工商业的社会主义改造经历了三个步骤。第一步（**初级形式的国家资本主义**）和第二步（**个别企业的公私合营**）的**企业利润分配**都是“**四马分肥**”。第三步（**全行业的公私合营**）在分配上实行**定股定息**。
 
@@ -1020,6 +1026,57 @@
 | 第三步 | 基本上成为**社会主义国营**性质 |
 
 32.第一步实行初级形式的国家资本主义。国家在私营工业中实行委托加工、计划订货、统购包销，这主要是**同资本家在企业外部的合作**。
+
+022.新民主主义社会有五种经济成分，其中**主要的经济成分**有三种：
+
+1. 社会主义经济
+2. 个体经济
+3. 资本主义经济
+
+**过渡性质的经济成分**有两种：
+
+1. 半社会主义性质的合作社经济（个体经济向社会主义集体经济过渡的形式）
+2. 国家资本主义经济（私人资本主义经济向社会主义国营经济过渡的形式）
+
+023.新民主主义时期三种不同性质的经济成分及与之相联系的三者基本的阶级力量之间的矛盾，集中表现为：
+
+1. 社会主义和资本主义两条道路的矛盾
+2. 工人阶级和资产阶级两个阶级的矛盾
+
+党的八大指出：**三大改造完成后**中国的主要矛盾是人民对经济文化迅速发展的需要同当前经济文化不能满足人民需要的状况之间的矛盾。
+
+024.对于新民主主义向社会主义的过渡，毛泽东及党的其他领导，**先后**有过的**思路**：
+
+1. 先搞工业化建设，再一举过渡（新中国成立之初的设想）
+2. 建设和改造同时并举、从中华人民共和国成立起逐步过渡
+
+025.三大改造时，初级形式的国家资本主义表现为：
+
+1. 委托加工
+2. 计划订货
+3. 统购包销（不等于统购统销——计划收购和计划供应）
+4. 经销代销
+
+026.国家资本主义：
+
+1. 是与社会主义直接相联系的、国家直接控制和支配下的资本主义经济
+2. 不是一种独立的经济形态
+3. 性质取决于**所在国家的性质**
+4. 是私人资本主义经济向社会主义**国营经济**过渡的形式（个体经济向社会主义集体经济的过渡形式是半社会主义的合作社经济）
+
+027.中国革命分两步走：（命题角度：所以后者的举措不会成为前者的前提）
+
+1. 民主革命
+2. 社会主义革命
+
+028.三大改造的基本完成：
+
+1. 标志着中国历史上长达数千年的**阶级剥削制度的结束**
+2. 实现了由新民主主义向社会主义的转变
+3. 标志着社会主义基本制度在我国确立
+4. 标志着我国社会主义初级阶段就此开始
+
+029.1956年三大改造基本完成，社会主义基本制度在中国确立的时候，马克思主义**同中国实际的“第二次结合”刚开始，并没有完成**。
 
 ### 第四章 社会主义建设道路初步探索的理论成果
 
