:memo:完善已有内容

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -881,12 +881,12 @@
 
 20.三对三关系：
 
-| 三样法宝                             | 统一战线         | 武装斗争         | 党的建设               |
-| ------------------------------------ | ---------------- | ---------------- | ---------------------- |
-| **中国革命道路的内容**               | **土地革命**     | **武装斗争**     | **农村革命根据地建设** |
-| **毛泽东思想活的灵魂的三个基本方面** | **实事求是**     | **群众路线**     | **独立自主**           |
-| **党的优良传统**                     | **理论联系实际** | **密切联系群众** | **批评与自我批评**     |
-| **巩固抗日民族统一战线的策略总方针** | **发展进步势力** | **争取中间势力** | **孤立顽固势力**       |
+| 三大法宝                                                 | 统一战线                   | 武装斗争                       | 党的建设                                               |
+| -------------------------------------------------------- | -------------------------- | ------------------------------ | ------------------------------------------------------ |
+| **中国革命道路的内容(工农武装割据要处理好的三个方面是)** | **土地革命(基本内容)**     | **武装斗争(主要形式)**         | **农村革命根据地建设(依托)**                           |
+| **毛泽东思想活的灵魂的三个基本方面**                     | **实事求是(根本思想路线)** | **群众路线(根本工作路线)**     | **独立自主(根本政治原则)**                             |
+| **党的优良传统(三大优良作风)**                           | **理论联系实际**           | **密切联系群众(最大政治优势)** | **批评与自我批评(中国共产党区别于其他政党的显著标志)** |
+| **巩固抗日民族统一战线的策略总方针**                     | **发展进步势力**           | **争取中间势力**               | **孤立顽固势力**                                       |
 
 21.中国革命建立最广泛的统一战线不仅是必要的，而且是**可能的**，这种可能是由**半殖民地半封建的中国社会的交织交织在一起的诸多矛盾所决定的**。
 
@@ -1029,9 +1029,9 @@
 
 022.新民主主义社会有五种经济成分，其中**主要的经济成分**有三种：
 
-1. 社会主义经济
-2. 个体经济
-3. 资本主义经济
+1. 社会主义性质的国营经济(**领导地位**)
+2. 农民和手工业者的个体经济(占绝对优势)
+3. 私人资本主义经济
 
 **过渡性质的经济成分**有两种：
 
@@ -1061,7 +1061,7 @@
 
 1. 是与社会主义直接相联系的、国家直接控制和支配下的资本主义经济
 2. 不是一种独立的经济形态
-3. 性质取决于**所在国家的性质**
+3. 性质**取决于所在国家的性质**
 4. 是私人资本主义经济向社会主义**国营经济**过渡的形式（个体经济向社会主义集体经济的过渡形式是半社会主义的合作社经济）
 
 027.中国革命分两步走：（命题角度：所以后者的举措不会成为前者的前提）
