:pencil2:删除冗余标号、添加标记

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -4,7 +4,7 @@
 
 ### 导论
 
-1.马恩著作：
+1-5.马恩著作：
 
 | 著作                             | 对应                                                         |
 | -------------------------------- | ------------------------------------------------------------ |
@@ -16,15 +16,7 @@
 | 《共产党宣言》的发表             | **标志着马克思主义公开问世**                                 |
 | 《资本论》                       | **工人阶级的圣经**                                           |
 
-2.为**创立马克思主义奠定思想前提**的是：马克思、恩格斯完成了从唯心主义向唯物主义，从革命民主主义向共产主义转变
-
-3
-
-4.
-
-5.
-
-6.
+6.为**创立马克思主义奠定思想前提**的是：马克思、恩格斯完成了从唯心主义向唯物主义，从革命民主主义向共产主义转变
 
 7.**人民性**是马克思主义的**本质属性**；**人民性、实践性和发展性**集中地体现为**革命性**。
 
@@ -173,9 +165,9 @@
 
 25.**感性认识是在实践中产生的**，由感性认识到理性认识的飞跃也是在实践基础上实现的。
 
-26.感性认识反映事物的现象，理性认识反映事物的本质（但不一定完全正确）
+26.感性认识反映事物的**现象**，理性认识反映事物的**本质**（但不一定完全正确）
 
-27.价值评价有科学和非科学之分**，评价结果有正确与错误之分**。
+27.价值评价有**科学和非科学之分****，评价结果有正确与错误之分**。
 
 28.真理是一个发展过程，**既是绝对的，又是相对的**，这是真理问题上的辩证法（所以不能说真理从相对到绝对）
 
