--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -763,6 +763,13 @@
 3. 允许私人小工业企业发展
 4. 采取一些国家资本主义的形式来发展生产
 
+新经济政策期间，列宁对苏维埃俄国如何建设社会主义进行了深刻的理论思考，提出了许多精辟的论述：
+
+1. 指出马克思主义执政党建设的极端重要性
+2. 阐明了思想建设和文化建设的重要意义
+3. 提出了加强国家政权建设和发扬社会民主的一系列措施
+4. 提出“**根据经验来谈论社会主义**”
+
 0117.苏联的**农业合作化**是在20世纪30年代前中期完成的，**苏联模式**也是在这个时期形成的（列宁逝世后），不在新经济政策时期。
 
 0118.**社会主义发展道路的多样性**中，“各国人口因素和自然地理环境的不同是造就社会主义发展道路多样性的决定因素”属于**人口和地理决定论**的观点，是错误的。（注意决定、根本、基本等字眼）
