:memo:完善已有知识点

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1008,11 +1008,11 @@
 
 29.对农业、个体手工业及资本主义工商业的社会主义改造：
 
-|                | 社会主义萌芽性质       | 半社会主义性质     | 完全的社会主义性质 | 采取方法     |
-| -------------- | ---------------------- | ------------------ | ------------------ | ------------ |
-| 农业           | 互助组                 | 初级农业生产合作社 | 高级农业生产合作社 | 合作化       |
-| 个体手工业     | 手工业供销小组         | 手工业供销合作社   | 手工业生产合作社   | 合作化       |
-| 资本主义工商业 | 初级形式的国家资本主义 | 个别企业的公私合营 | 全行业的公私合营   | 国家资本主义 |
+|                | 社会主义萌芽性质       | 半社会主义性质     | 完全的社会主义性质 | 采取方法                 |
+| -------------- | ---------------------- | ------------------ | ------------------ | ------------------------ |
+| 农业           | 互助组                 | 初级农业生产合作社 | 高级农业生产合作社 | 合作化                   |
+| 个体手工业     | 手工业供销小组         | 手工业供销合作社   | 手工业生产合作社   | 合作化                   |
+| 资本主义工商业 | 初级形式的国家资本主义 | 个别企业的公私合营 | 全行业的公私合营   | 国家资本主义（和平赎买） |
 
 30.对资本主义工商业的社会主义改造经历了三个步骤。第一步（**初级形式的国家资本主义**）和第二步（**个别企业的公私合营**）的**企业利润分配**都是“**四马分肥**”。第三步（**全行业的公私合营**）在分配上实行**定股定息**。
 
