:memo:完善已有内容

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -805,7 +805,7 @@
 
 01.毛泽东思想是关于**中国革命和建设**的正确的理论原则和经验总结，不涉及对**改革经验**的总结问题。中国特色社会主义理论体系是在改革开放之后创立的，不涉及对**革命经验**的总结问题。
 
-（干扰选项×：马克思主义中国化时代化的理论成果是一脉相承又与时俱进的关系。它们**都是**关于中国革命、建设、改革的正确的理论原则和经验总结）
+（干扰选项×：马克思主义中国化时代化的理论成果是一脉相承又与时俱进的关系。它们**都是**关于中国**革命、建设、改革**的正确的理论原则和经验总结）
 
 
 
@@ -846,13 +846,7 @@
 
 ### 第二章 新民主主义革命理论
 
-8.1948年，毛泽东在《晋绥干部会议上的讲话》中完整地总结和概括了总路线的内容，指出“无产阶级领导的、人民大众的，**反对帝国主义、封建主义和官僚资本主义的革命**，这就是中国的新民主主义的革命，这就是中国共产党在当前历史阶段的总路线和总政策。”
-
-9.**无产阶级的领导权**是**中国革命的中心问题**，也是**新民主主义革命理论的核心问题**。
-
-10.在中国民主革命中，**无产阶级领导权的中心问题**是**农民问题**。
-
-11.农民问题乃**国民革命(1925-1927)的中心问题**——毛泽东《国民革命与农民运动》
+8-11.1948年，毛泽东在《晋绥干部会议上的讲话》中完整地总结和概括了总路线的内容，指出“无产阶级领导的、人民大众的，**反对帝国主义、封建主义和官僚资本主义的革命**，这就是中国的新民主主义的革命，这就是中国共产党在当前历史阶段的总路线和总政策。”
 
 12.“统帅革命的资产阶级，联合革命的无产阶级，实行资产阶级民主革命。”这一观点的**错误实质**在于**放弃无产阶级的领导权**，因为领导权问题是新、旧民主主义革命的**根本区别**。
 
@@ -867,6 +861,10 @@
 | **基本问题**             | **农民问题**   |
 | **核心问题（中心问题）** | **领导权问题** |
 | **主要内容**             | **土地问题**   |
+
+* 在中国民主革命中，**无产阶级领导权的中心问题**是**农民问题**。
+* **无产阶级的领导权**是**中国革命的中心问题**，也是**新民主主义革命理论的核心问题**。
+* **农民问题**乃**国民革命(1925-1927)的中心问题**——毛泽东《国民革命与农民运动》
 
 15.**没收封建地主阶级的土地归农民所有**，是新民主主义经济纲领的三项内容之一，是**新民主主义革命**的**主要内容**。
 
