--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -815,11 +815,11 @@
 
 4.毛泽东思想的形成和发展：
 
-| 事件                                     | 标志     | 著作                                             | 时间             |
-| ---------------------------------------- | -------- | ------------------------------------------------ | ---------------- |
-| 新民主主义革命基本思想的提出             | 萌芽     | 《中国社会各阶级的分析》《湖南农民运动考察报告》 | 大革命时期       |
-| 深入阐述农村包围城市、武装夺取政权的思想 | 初步形成 |                                                  | 土地革命战争时期 |
-|                                          |          |                                                  |                  |
+| 事件                                     | 标志     | 著作                                                         | 时间             |
+| ---------------------------------------- | -------- | ------------------------------------------------------------ | ---------------- |
+| 新民主主义革命基本思想的提出             | 萌芽     | 《中国社会各阶级的分析》《湖南农民运动考察报告》             | 大革命时期       |
+| 深入阐述农村包围城市、武装夺取政权的思想 | 初步形成 | 《反对本本主义》《论反对日本帝国主义的策略》《中国革命战争的战略问题》《实践论》《矛盾论》 | 土地革命战争时期 |
+| 新民主主义理论的系统阐述                 | 成熟     | 《论持久战》                                                 | 抗日战争时期     |
 
 5.毛泽东思想**活的灵魂**是贯穿于毛泽东思想各个组成部分的**立场、观点、方法**，体现为**实事求是、群众路线、独立自主**三个基本方面。
 
