--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -374,7 +374,7 @@
 
 55.**劳动的二重性**（具体劳动和抽象劳动）决定了**商品的二因素**（使用价值和价值）
 
-56.具体劳动和抽象劳动是对立统一关系，二者的区别体现在**具体劳动反映人与自然的关系**，是劳动的自然属性，而**抽象劳动所反映的是商品生产者的社会关系**，是劳动的社会属性。
+56.具体劳动和抽象劳动是**对立统一**关系，二者的区别体现在**具体劳动反映人与自然的关系**，是劳动的自然属性，而**抽象劳动所反映的是商品生产者的社会关系**，是劳动的社会属性。
 
 57.**空间上并存，时间上继起**是**产业资本运动**必须具备的两个**基本前提条件**。
 
@@ -878,12 +878,12 @@
 
 20.三对三关系：
 
-| 三大法宝                                                 | 统一战线                   | 武装斗争                       | 党的建设                                               |
-| -------------------------------------------------------- | -------------------------- | ------------------------------ | ------------------------------------------------------ |
-| **中国革命道路的内容(工农武装割据要处理好的三个方面是)** | **土地革命(基本内容)**     | **武装斗争(主要形式)**         | **农村革命根据地建设(依托)**                           |
-| **毛泽东思想活的灵魂的三个基本方面**                     | **实事求是(根本思想路线)** | **群众路线(根本工作路线)**     | **独立自主(根本政治原则)**                             |
-| **党的优良传统(三大优良作风)**                           | **理论联系实际**           | **密切联系群众(最大政治优势)** | **批评与自我批评(中国共产党区别于其他政党的显著标志)** |
-| **巩固抗日民族统一战线的策略总方针**                     | **发展进步势力**           | **争取中间势力**               | **孤立顽固势力**                                       |
+| 三大法宝                                             | 统一战线               | 武装斗争                   | 党的建设                                           |
+| ---------------------------------------------------- | ---------------------- | -------------------------- | -------------------------------------------------- |
+| 中国革命道路的内容(工农武装割据要处理好的三个方面是) | 土地革命(基本内容)     | 武装斗争(主要形式)         | 农村革命根据地建设(依托)                           |
+| 毛泽东思想活的灵魂的三个基本方面                     | 实事求是(根本思想路线) | 群众路线(根本工作路线)     | 独立自主(根本政治原则)                             |
+| 党的优良传统(三大优良作风)                           | 理论联系实际           | 密切联系群众(最大政治优势) | 批评与自我批评(中国共产党区别于其他政党的显著标志) |
+| 巩固抗日民族统一战线的策略总方针                     | 发展进步势力           | 争取中间势力               | 孤立顽固势力                                       |
 
 21.中国革命建立最广泛的统一战线不仅是必要的，而且是**可能的**，这种可能是由**半殖民地半封建的中国社会的交织交织在一起的诸多矛盾所决定的**。
 
