--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -24,9 +24,10 @@
 
 01.马克思主义主要由**哲学、政治经济学、科学社会主义**三大组成部分构成，来源于三大思潮最终升华的原因：
 
-| 马克思对所处时代和世界的深入观察（根本原因） | 马克思对人类社会发展规律的深刻把握（根本原因）           |
-| -------------------------------------------- | -------------------------------------------------------- |
-| 马克思拥有优良的家庭背景和教育经历           | 马克思出生和生活的德、英、法国是当时最发达的资本主义国家 |
+* **马克思对所处时代和世界的深入观察（根本原因）**
+* **马克思对人类社会发展规律的深刻把握（根本原因）**
+* 马克思拥有优良的家庭背景和教育经历
+* 马克思出生和生活的德、英、法国是当时最发达的资本主义国家
 
 ### 第一章 世界的物质性及发展规律
 
@@ -303,13 +304,12 @@
 
 055.**经济基础的性质**由**占支配地位的生产关系的性质**决定（不是由国家性质决定）
 
-056.
+056.上层建筑分为：**观念上层建筑**和**政治上层建筑**
 
-| 上层建筑↓                        |                  |      |  |              |      | |
-| -------------------------------- | ---------------- | ---- | ---- | ---- | ---- | -------------------------------- |
-| **观念上层建筑**（社会意识形态） | 宗教   | 道德 | 艺术 | 政治法律思想 | 哲学 | ... |
-| **政治上层建筑**（主导地位）     | 政治法律制度→  | 国家政治制度 | 立法司法制度 | 行政制度 |...| ... |
-|                                  | 政治组织及设施→ | 国家政权机构（核心） | 政党 | 军队 | 法庭 | 监狱 |
+| **观念上层建筑**（社会意识形态） | 宗教            | 道德                 | 艺术         | 政治法律思想 | 哲学 |
+| -------------------------------- | ---------------- | ---- | ---- | ---- | ---- |
+| **政治上层建筑**（主导地位）     | 政治法律制度→   | 国家政治制度         | 立法司法制度 | 行政制度     | ...  |
+|                                  | 政治组织及设施→ | 国家政权机构（核心） | 政党         | 军队         | 法庭 |
 
 057.国家是：
 
