--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -306,10 +306,10 @@
 
 056.上层建筑分为：**观念上层建筑**和**政治上层建筑**
 
-| **观念上层建筑**（社会意识形态） | 宗教            | 道德                 | 艺术         | 政治法律思想 | 哲学 |
-| -------------------------------- | ---------------- | ---- | ---- | ---- | ---- |
-| **政治上层建筑**（主导地位）     | 政治法律制度→   | 国家政治制度         | 立法司法制度 | 行政制度     | ...  |
-|                                  | 政治组织及设施→ | 国家政权机构（核心） | 政党         | 军队         | 法庭 |
+1. **观念上层建筑**（社会意识形态）:宗教、道德、艺术、政治法律思想、哲学、...
+2. **政治上层建筑**（主导地位）
+   * 政治法律制度：国家政治制度、立法司法制度、行政制度、...
+   * 政治组织及设施：国家政权机构（核心）、政党、军队、法庭、...
 
 057.国家是：
 
