--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -780,11 +780,10 @@
 
 110.共产主义社会的特征
 
-| 实现人的自由而全面的发展（根本特征） |
-| ------------------------------------ |
-| 物质财富极大丰富，消费资料按需分配   |
-| 社会关系高度和谐                     |
-| 人们的精神境界极大提高               |
+1. **实现人的自由而全面的发展（根本特征）**
+2. 物质财富极大丰富，消费资料按需分配
+3. 社会关系高度和谐
+4. 人们的精神境界极大提高
 
 0119.**共产主义社会**中，人的**自由而全面的发展**指的是：
 
