--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1125,12 +1125,12 @@
 
 46.科学发展观：
 
-| 科学发展观的 | 是什么？         |
-| ------------ | ---------------- |
-| 第一要义     | 推动经济社会发展 |
-| 核心立场     | 以人为本         |
-| 基本要求     | 全面协调可持续   |
-| 根本方法     | 统筹兼顾         |
+| 科学发展观 | 基本内涵的四个方面 |
+| ---------- | ------------------ |
+| 第一要义   | (推动经济社会)发展 |
+| 核心立场   | 以人为本           |
+| 基本要求   | 全面协调可持续     |
+| 根本方法   | 统筹兼顾           |
 
 47.马克思主义政党**自身建设**的**根本任务和永恒课题**是：**保持和发展党的先进性**
 
