--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -615,14 +615,17 @@
 
 094.垄断资本向**世界范围扩展**的**基本形式**有：
 
-* ①**借贷**资本输出
-* ②**生产**资本输出
-* ③**商品**资本输出
+1. **借贷**资本输出
+
+2. **生产**资本输出
+
+3. **商品**资本输出
 
 095.从输出资本的**主体**上看，主要有两种：
 
-* ①私人资本输出
-* ②国家资本输出
+1. 私人资本输出
+
+2. 国家资本输出
 
 096.垄断资本向世界范围扩展的主要经济动因是：
 
@@ -674,19 +677,21 @@
 
 0105.资本主义国家内部的矛盾和冲突日益明显：
 
-* ①**经济发展失调**
-  * a.虚拟经济与实体经济发展失衡
-  * b.福利风险增加
-  * c.债务负担沉重，巨额政府债务又埋下了新一轮金融危机的隐患
-* ②**政治体制失灵**
-  * a.西式选举往往难以举贤
-  * b.政党利益可能凌驾于国家利益之上
-  * c.“民主陷阱”会阻碍国家治理
-  * d.传统精英政治走向衰弱，大众政治与精英政治的对立日趋严重，民粹主义思潮泛起，西方精英政治陷入困境
-* ③**社会融合机制失效**
-  * a.社会极端思潮抬头
-  * b.社会流动性退化（常考，注意是社会融合机制）
-  * c.社会矛盾激化
+1. **经济发展失调**
+   * ①虚拟经济与实体经济发展失衡
+   * ②福利风险增加
+   * ③债务负担沉重，巨额政府债务又埋下了新一轮金融危机的隐患
+
+2. **政治体制失灵**
+   * ①西式选举往往难以举贤
+   * ②政党利益可能凌驾于国家利益之上
+   * ③“民主陷阱”会阻碍国家治理
+   * ④传统精英政治走向衰弱，大众政治与精英政治的对立日趋严重，民粹主义思潮泛起，西方精英政治陷入困境
+
+3. **社会融合机制失效**
+   * ①社会极端思潮抬头
+   * ②社会流动性退化（常考，注意这条属于社会融合机制）
+   * ③社会矛盾激化
 
 ### 第六章 社会主义的发展及其规律
 
