--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -721,8 +721,9 @@
 
 0106.社会主义从空想发展到科学，是因为马克思、恩格斯在新的历史条件下创立了：
 
-* ①**唯物史观**
-* ②**剩余价值学说**
+1. **唯物史观**
+
+2. **剩余价值学说**
 
 0107.空想社会主义“没有能欧指出真正的出路。它既**不会阐明资本主义制度下雇佣奴隶制的本质**，又不会发现资本主义发展的规律，也不会找到能够成为新社会的创造者的社会力量。
 
