--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -168,7 +168,7 @@
 
 26.感性认识反映事物的**现象**，理性认识反映事物的**本质**（但不一定完全正确）
 
-27.价值评价有**科学和非科学之分****，评价结果有正确与错误之分**。
+27.价值评价有**科学和非科学之分**，评价结果**有正确与错误之分**。
 
 28.真理是一个发展过程，**既是绝对的，又是相对的**，这是真理问题上的辩证法（所以不能说真理从相对到绝对）
 
@@ -408,7 +408,7 @@
 
 70.资本主义生产过程中的主要方面是**价值的增殖过程（剩余价值的生产过程）**。
 
-71.
+71.具体劳动与抽象劳动的区别：
 
 | **具体劳动** | ①形成（创造）商品的使用价值 | ②转移生产资料的价值到新产品中去             |
 | ------------ | --------------------------- | ------------------------------------------- |
