--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -110,10 +110,13 @@
 
 012.**解决矛盾的形式**有：
 
-* ①矛盾双方**同归于尽**
-* ②矛盾一方克服另一方
-* ③矛盾双方形成协同运动的新形式
-* ④矛盾双方**融合**成一个新事物（注意不可以换成**调和**，调和论否认对立双方的斗争，也就否认了事物发展）
+1. 矛盾双方**同归于尽**
+
+2. 矛盾一方克服另一方
+
+3. 矛盾双方形成协同运动的新形式
+
+4. 矛盾双方**融合**成一个新事物（注意不可以换成**调和**，调和论否认对立双方的斗争，也就否认了事物发展）
 
 013.**量变质变规律**原理：
 
@@ -140,9 +143,9 @@
 
 018.“扬弃”是：
 
-* ①连续性和非连续性的统一
-* ②联系和发展的统一
-* ③包含着肯定的否定
+* 连续性和非连续性的统一
+* 联系和发展的统一
+* 包含着肯定的否定
 
 019.**本质**与**现象**是**相互依存**的，**不表现为现象的本质**和**不表现本质的现象**都是不存在的。
 
