:memo:更新正文内容

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -840,7 +840,7 @@
 
 02.毛泽东明确提出，把马克思列宁主义基本原理同中国具体实际进行“**第二次**结合，找出在中国怎么样建设社会主义道路”的任务。不是“**第二个**结合”（马克思主义基本原理同中华优秀传统文化相结合）。
 
-03.实事求是是
+03.“实事求是”是
 
 1. 中国共产党的思想路线
 2. 中国共产党人认识世界、改造世界的根本要求
@@ -887,7 +887,7 @@
 
 19.坚持党对军队的绝对领导，这是建设新型人民军队的**根本原则**，是保持人民军队无产阶级性质和建军宗旨的**根本前提**，也是毛泽东建军思想的**核心**。
 
-20.三对三关系：
+20.几组三对三关系：
 
 | 三大法宝                                             | 统一战线               | 武装斗争                   | 党的建设                                           |
 | ---------------------------------------------------- | ---------------------- | -------------------------- | -------------------------------------------------- |
