:memo:正文内容完善

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -90,7 +90,7 @@
 
 07.鬼神观念是人**脑对客观世界的歪曲反映**，可以在人世间找到它的原型
 
-（注意，只有客观存在才能反映，所以不能说鬼神观念是人脑对鬼神的虚幻反映）
+（注意，只有**客观存在**才能**反映**，所以不能说鬼神观念是人脑对鬼神的虚幻反映）
 
 08.人类改造世界的实践活动，使世界发生了**二重分化**，即：
 
