:memo:毛泽东思想和中国特色社会主义理论体系概论 完结

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1092,6 +1092,26 @@
 
 34.20世纪50年代中期，毛泽东明确提出要走一条有别于苏联的中国工业化道路。走中国工业化道路主要是强调要正确处理**重工业和轻工业、农业的关系**。
 
+030.1956年，毛泽东提出“第二次结合”，这说明中国共产党
+
+1. 开始探索适合中国特点的社会主义建设道路
+2. 开始摆脱单一的苏联模式
+
+031.“在社会主义社会中，**基本的矛盾**仍然是**生产关系和生产力之间的矛盾，上层建筑和经济基础之间的矛盾**”。社会主义的基本矛盾同以往社会的基本矛盾“**具有根本不同的性质和情况**”
+
+032.《论十大关系》标志着党探索中国社会主义建设道路的良好开端。
+
+033.发展国民经济的总方针：以**农业**为**基础**，以**工业**为**主导**，以**农轻重为序**。
+
+034.“两条腿走路”的工业化发展思路：
+
+1. 重工业和轻工业
+2. 中央工业和地方工业同时并举
+3. 沿海工业和内地工业同时并举
+4. 大型企业和小型企业同时并举
+
+035.在社会主义**文化建设**方面，毛泽东提出，要坚持**马克思主义的指导地位**，实行“**百花齐放、百家争鸣**”的方针，对**古今中外的优秀文化**，实行“**古为今用、洋为中用、百花齐放、推陈出新**”的方针。
+
 ### 第五章 中国特色社会主义理论体系的形成发展
 
 35.**邓小平**在**党的十二大**上提出的一个具有里程碑意义的**重大命题**是**建设有中国特色的社会主义**。从此，“中国特色社会主义”成为我们党的全部理论和实践创新的主题。**这一重大命题的提出具有里程碑意义，是中国共产党人对科学社会主义发展的开创性贡献**。
@@ -1103,6 +1123,13 @@
 | 党的十二大     | 邓小平理论的主题形成   |
 | 党的十三大     | 邓小平理论的轮廓形成   |
 | 1992年南方谈话 | 邓小平理论逐步走向成熟 |
+
+036.中国特色社会主义理论体系逐步形成和发展的**社会历史条件**是：
+
+1. 对国际形势深刻变化和世界发展新趋势的深刻把握（国际背景）
+2. 对建设社会主义正反两方面经验的认真总结（历史条件）
+3. 对我国发展历史方位的科学判断（历史条件）
+4. 对中国特色社会主义建设实践经验的科学总结（实践背景）
 
 ### 第六章 邓小平理论
 
@@ -1125,6 +1152,25 @@
 
 42.**和平统一，一国两制”**构想的提出，最早是针对**台湾问题提出来的**。
 
+037.社会主义初级阶段的科学含义是：
+
+1. 我国**已经进入**社会主义社会
+2. 我国的社会主义还处在不发达的阶段
+
+（干扰选项：1949年-1956年，是**新民主主义社会**，也可以称为**过渡时期**的社会，社会主义初级阶段不能称为过渡时期）
+
+038.**社会主义本质理论**正确回答了**邓小平理论首要的基本的理论问题**，即什么是社会主义，怎样建设社会主义。
+
+039.判断改革和各方面是非得失，归根到底，主要看（“三个有利于”标准）：
+
+1. 是否有利于发展社会主义社会的**生产力**
+2. 是否有利于增强社会主义国家的**综合国力**
+3. 是否有利于提高**人民生活水平**
+
+040.计划和市场都**<u>不属于</u>社会基本制度的范畴**，计划经济和市场经济**不是划分社会制度的标志**，计划和市场都是**经济手段**。
+
+041.邓小平理论是中国**建设、改革**的科学指南（不涉及**革命**）。
+
 ### 第七章 “三个代表”重要思想
 
 43.要正确认识和处理改革、发展、稳定的关系。改革是**动力**，发展是**目的**，稳定是**前提**。要把**改革的力度、发展的速度和社会可承受的程度统一起来**，**把不断改善人民生活作为处理改革、发展、稳定关系的重要<u>结合点</u>**。
@@ -1132,6 +1178,15 @@
 44.公有制和公有制的实现形式是两个不同层次的问题。**公有制的实现形式是指资产或资本的组织形式和经营方式**。
 
 45.执政兴国的**第一要务**是**发展**
+
+042.我国对外开放的战略（并非原则）：实施“引进来”和“走出去”相结合
+
+043.“三个代表”重要思想在于用一系列紧密联系、相互贯通的新思想新观点新论断：
+
+1. **进一步回答了**什么是社会主义、怎样建设社会主义
+2. **创造性回答了**建设什么样的党、怎样建设党的问题
+3. **继承和发展**了马克思列宁主义、毛泽东思想、邓小平理论
+4. **深化**了我们对新时代条件下推进中国特色社会主义事业、加强党的建设的**规律的认识**。
 
 ### 第八章 科学发展观
 
@@ -1149,3 +1204,21 @@
 48.坚持中国特色社会主义政治发展道路，**最根本的是要坚持党的领导、人民当家作主、依法治国有机统一**。
 
 其中，党的领导是人民当家作主和依法治国的**根本保证**，人民当家作主是社会主义民主政治的**本质和核心**，依法治国是党领导人民治理国家的**基本方略**。
+
+044.坚持**以人为本**，就要：
+
+1. 坚持发展为了人民
+2. 坚持发展依靠人民
+3. 坚持发展成果由人民共享
+4. 最终是为了实现人的全面发展
+
+045.科学发展观最鲜明的**精神实质**是：
+
+1. 解放思想
+2. 实事求是
+3. 与时俱进
+4. 求真务实
+
+
+
+## 习近平新时代中国特色社会主义思想概论
