--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1199,11 +1199,11 @@
 | 基本要求   | 全面协调可持续     |
 | 根本方法   | 统筹兼顾           |
 
-47.马克思主义政党**自身建设**的**根本任务和永恒课题**是：**保持和发展党的先进性**
+47.马克思主义政党**自身建设**的**根本任务**和**永恒课题**是：**保持和发展党的先进性**
 
 48.坚持中国特色社会主义政治发展道路，**最根本的是要坚持党的领导、人民当家作主、依法治国有机统一**。
 
-其中，党的领导是人民当家作主和依法治国的**根本保证**，人民当家作主是社会主义民主政治的**本质和核心**，依法治国是党领导人民治理国家的**基本方略**。
+其中，**党的领导**是人民当家作主和依法治国的**根本保证**，**人民当家作主**是社会主义民主政治的**本质和核心**，**依法治国**是党领导人民治理国家的**基本方略**。
 
 044.坚持**以人为本**，就要：
 
