--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1155,9 +1155,9 @@
 037.社会主义初级阶段的科学含义是：
 
 1. 我国**已经进入**社会主义社会
-2. 我国的社会主义还处在不发达的阶段
+2. 我国的社会主义还处在**不发达的阶段**
 
-（干扰选项：1949年-1956年，是**新民主主义社会**，也可以称为**过渡时期**的社会，社会主义初级阶段不能称为过渡时期）
+（干扰选项：1949年-1956年，是**新民主主义社会**，也可以称为**过渡时期**的社会，社会主义**初级阶段不能称为过渡时期**）
 
 038.**社会主义本质理论**正确回答了**邓小平理论首要的基本的理论问题**，即什么是社会主义，怎样建设社会主义。
 
@@ -1173,13 +1173,13 @@
 
 ### 第七章 “三个代表”重要思想
 
-43.要正确认识和处理改革、发展、稳定的关系。改革是**动力**，发展是**目的**，稳定是**前提**。要把**改革的力度、发展的速度和社会可承受的程度统一起来**，**把不断改善人民生活作为处理改革、发展、稳定关系的重要<u>结合点</u>**。
+43.要正确认识和处理**改革、发展、稳定**的关系。改革是**动力**，发展是**目的**，稳定是**前提**。要把**改革的力度、发展的速度和社会可承受的程度统一起来**，**把不断改善人民生活作为处理改革、发展、稳定关系的重要<u>结合点</u>**。
 
 44.公有制和公有制的实现形式是两个不同层次的问题。**公有制的实现形式是指资产或资本的组织形式和经营方式**。
 
 45.执政兴国的**第一要务**是**发展**
 
-042.我国对外开放的战略（并非原则）：实施“引进来”和“走出去”相结合
+042.我国**对外开放的战略**（并非原则）：实施“**引进来**”和“**走出去**”相结合
 
 043.“三个代表”重要思想在于用一系列紧密联系、相互贯通的新思想新观点新论断：
 
