--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1219,8 +1219,353 @@
 3. 与时俱进
 4. 求真务实
 
-
+045.科学发展观创造性地回答了新形势下“实现什么样的发展、怎样发展”这一重大问题。
 
 ## 习近平新时代中国特色社会主义思想概论
 
 ### 导论
+
+1.“十个明确”、“十四个坚持”、“十三个方面成就”、“六个必须坚持”
+
+|                | 是习近平新时代中特思想的 | 内涵                                         | 作用                                                         |
+| -------------- | ------------------------ | -------------------------------------------- | ------------------------------------------------------------ |
+| 十个明确       | **主体内容**             | 集中体现这一思想的主要观点和基本精神         | 构成这一思想体系的四梁八柱，发挥**统摄作用**                 |
+| 十四个坚持     | **重要组成部分**         | 在治国理政各方面作出的理论分析和政策指导     | 构成了新时代坚持和发展中国特色社会主义的**基本方略**         |
+| 十三个方面成就 |                          | 对新时代伟大实践进行了科学总结               | 全景式地展示了习近平新时代中国特色社会主义思想的**理论与实践成果** |
+| 六个必须坚持   |                          | 赋予了马克思主义世界观和方法论以新的时代内涵 | 彰显了习近平新时代中国特色社会主义思想的**理论品格和鲜明特征** |
+
+2.六个必须坚持
+
+| 六个必须坚持 | 帽子                   |
+| ------------ | ---------------------- |
+| 坚持人民至上 | 根本价值立场           |
+| 坚持自信自立 | 内在精神特质           |
+| 坚持守正创新 | 鲜明理论品格           |
+| 坚持问题导向 | 重要实践要求           |
+| 坚持系统观念 | 基本思想和工作方法     |
+| 坚持胸怀天下 | 中国共产党人的境界格局 |
+
+01.**拥有马克思主义科学理论指导**是我们党**坚定信仰信念、把握历史主动的根本所在**。
+
+### 第一章 新时代坚持和发展中国特色社会主义
+
+3.改革开放以来我们取得一切成绩和进步的根本原因，归结起来就是：
+
+| 四大原因               | 帽子     |
+| ---------------------- | -------- |
+| 开辟了中特**道路**     | 实现途径 |
+| 形成了中特**理论体系** | 行动指南 |
+| 确立了中特**制度**     | 根本保障 |
+| 发展了中特**文化**     | 精神力量 |
+
+4.我们坚定“四个自信”的**理论支撑**和**根本依据**：**马克思主义深刻揭示了社会主义必然代替资本主义的客观规律**
+
+5.道路自信、理论自信、制度自信说到底是要坚定**文化自信**，文化自信是**更基础、更广泛、更深厚的自信**，是一个国家、一个民主发展中**最基本、最深沉、最持久的力量**。
+
+6.“四个全面”
+
+| 四个全面                       | 定位     | 地位         |
+| ------------------------------ | -------- | ------------ |
+| **全面建设社会主义现代化国家** | 战略目标 | **引领地位** |
+| 全面深化改革                   | 战略举措 | 提供重要保障 |
+| 全面依法治国                   | 战略举措 | 提供重要保障 |
+| 全面从严治党                   | 战略举措 | 提供重要保障 |
+
+02.坚定理论自信，就是坚信**中国特色社会主义理论体系**是指导党和人民实现中华民族伟大复兴的正确理论，是立足时代前沿、与时俱进的科学理论。
+
+03.中国特色社会主义道路自信、理论自信、制度自信、文化自信，来源于**实践、人民、真理**。
+
+04.**全面建成小康社会（2020年）**是中国特色社会主义**进入新时代之后**的事情。
+
+### 第二章 以中国式现代化全面推进中华民族伟大复兴
+
+7.实现中华民族伟大复兴的中国梦，**本质**是**国家富强、民族振兴、人民幸福**。
+
+8.中国式现代化的**显著特征**：**人口规模巨大**
+
+9.中国式现代化的本质特征/**区别于西方现代化**的**显著标志**：**共同富裕**
+
+10.我国现代化建设的**出发点和落脚点**是**实现人民对美好生活的向往**。
+
+11.“五个必由之路”
+
+| 对应关系                                                     |
+| ------------------------------------------------------------ |
+| **坚持党的全面领导**是**坚持发展中国特色社会主义**的**必由之路** |
+| **中国特色社会主义**是**实现中华民族伟大复兴**的**必由之路** |
+| **团结奋斗**是**中国人民创造历史伟业**的**必由之路**         |
+| **贯彻新发展理念**是**新时代我国发展壮大**的**必由之路**     |
+| **全面从严治党**是**党永葆生机活力、走好新的赶考之路**的**必由之路** |
+
+加快实现高水平科技自立自强，是推动高质量发展的**必由之路**。
+
+**改革开放**是**坚持发展中国特色社会主义**的**必由之路**
+
+### 第三章 坚持党的全面领导
+
+12.中国特色社会主义的最本质特征：**中国共产党领导**
+
+13.马克思主义政党第一位的能力：**政治领导力**
+
+14.党的领导的最高原则：**党中央集中统一领导**
+
+### 第四章 坚持以人民为中心
+
+15.我们党做好**一切工作和价值取向的根本标准**：**让群众满意**
+
+16.**发展**的**出发点和落脚点**是：**满足人民对美好生活的新期待**
+
+17.**现代化**的**最终目标**是实现：**人自由而全面的发展**
+
+### 第五章 全面深化改革
+
+18.**改革开放**的**鲜明特征和首要任务**：**解放和发展社会生产力**
+
+19.统筹推进各领域各方面改革开放：
+
+| 四大方面               | 帽子   |
+| ---------------------- | ------ |
+| 全面深化改革总目标     | 引领   |
+| 制度建设               | 主线   |
+| 经济体制改革           | 重点   |
+| 重要领域和关键环节改革 | 突破口 |
+
+20.**摸着石头过河**是**富有中国特色、符合中国国情的改革方法**
+
+### 第六章 推动高质量发展
+
+21.十八大以来，我们党对经济社会发展提出了许多重大理论和战略，其中**新发展理念**是**最重要、最主要**的。
+
+22.新发展理念
+
+| 新发展理念 | 地位                                             | 解决                 |
+| ---------- | ------------------------------------------------ | -------------------- |
+| 创新       | 引领发展的第一动力                               | 发展动力问题         |
+| 协调       | 持续健康发展的内在要求                           | 发展不平衡问题       |
+| 绿色       | 永续发展的必要条件和人民对美好生活追求的重要体现 | 人与自然和谐共生问题 |
+| 开放       | 国家繁荣发展的必由之路                           | 发展内外联动问题     |
+| 共享       | 中国特色社会主义的本质要求                       | 社会公平正义问题     |
+
+23.推动**高质量发展的主线**是：**深化供给侧结构性改革**
+
+24.高质量发展
+
+| 高质量发展                         | 地位                         |
+| ---------------------------------- | ---------------------------- |
+| 加快实现高水平科技自立自强         | 推动高质量发展的**必由之路** |
+| 加快构建新发展格局                 | 推动高质量发展的**战略基点** |
+| 推进农业现代化                     | 实现高质量发展的**必然要求** |
+| 更好统筹质的有效提升和量的合理增长 | 推动高质量发展的**重要举措** |
+
+25.要坚持把**发展经济的着力点**放在**实体经济**上
+
+26.**构建新发展格局**的**最本质的特征**是**实现高水平的自立自强**
+
+27.**保持优势产业的领先地位**，是支撑我国国际竞争力的**基石**。
+
+28.**战略性新兴产业**具有先导性，代表新一轮科技革命和产业变革的方向，是引领国家未来产业发展的**决定性力量**。
+
+29.**农业强国**是**社会主义现代化强国的根基**
+
+30.乡村振兴战略
+
+| 乡村振兴战略                                     | 地位     |
+| ------------------------------------------------ | -------- |
+| 农业农村现代化                                   | 总目标   |
+| 农业农村优先发展                                 | 总方针   |
+| 产业兴旺、生态宜居、乡风文明、治理有效、生活富裕 | 总要求   |
+| 建立健全城乡融合发展体制机制和政策体系           | 制度保障 |
+
+31.促进区域协调发展，是贯彻新发展理念的重要内容，也是实现高质量发展的必然要求。
+
+| 促进区域协调发展     | 例子                                                         |
+| -------------------- | ------------------------------------------------------------ |
+| 实施区域协调发展战略 | 西部大开发、东北全面振兴、促进中部地区崛起、鼓励东部地区加快推进现代化 |
+| 实施区域重大战略     | 京津冀协同发展、长江经济带发展、粤港澳大湾区建设、长三角一体化发展、黄河流域生态保护和高质量发展、高标准高质量建设雄安新区、推动成渝地区双城经济圈建设 |
+| 实施主体功能区战略   | 逐步形成城市化地区、农产品主产区、生态功能区三大空间格局     |
+
+### 第七章 社会主义现代化建设的教育、科技、人才战略
+
+32.建设教育强国
+
+| 建设教育强国                                 | 地位     |
+| -------------------------------------------- | -------- |
+| 坚持党对教育事业的全面领导                   | 根本保证 |
+| 立德树人                                     | 根本任务 |
+| 为党育人、为国育才                           | 根本目标 |
+| 服务中华民族伟大复兴                         | 重要使命 |
+| 教育理念、体系、制度、内容、方法、治理现代化 | 基本路径 |
+| 支撑引领中国式现代化                         | 核心功能 |
+
+33.**科技**是**第一生产力**，**人才**是第一**资源**，**创新**是第一**动力**。
+
+34.**基础研究**是**科技创新的源头**。
+
+35.**国家战略科技力量**是世界科技强国竞争的**着力点**。
+
+### 第八章 发展全过程人民民主
+
+36.**坚定中国特色社会主义制度自信**，首先要**鉴定对中国特色社会主义政治制度的自信**。
+
+37.**中华民族共同体意识**是**民族团结之本**。
+
+38.**新时代爱国统一战线的历史责任**是**促进中华儿女大团结**
+
+### 第九章 全面依法治国
+
+39.坚持依宪治国、依宪执政，作为首要任务的是**全面贯彻实施宪法**。
+
+40.**全面依法治国**的**重点任务和主体工程**是**法治政府建设**
+
+### 第十章 建设社会主义文化强国
+
+41.建设社会主义文化强国、推动社会主义文化繁荣兴盛，关键在于**坚定中国特色社会主义文化自信**。
+
+42.**坚持正确的政治方向**是**做好新闻舆论工作的第一位要求**。
+
+43.**管好用好互联网**是新形势下**做好新闻舆论工作的关键**。
+
+44.
+
+* 中华文明的**连续性**，从根本上决定了**中华民族必然走自己的路**。
+* 中华文明的**统一性**，从根本上决定了**中华民族各民族文化融为一体**。
+* 中华文明的**创新性**，从根本上决定了**中华民族守正不守旧、尊古不复古的进取精神**。
+
+45.满足人民精神文化需求、保障人民文化权益的**基本途径**是：**繁荣发展文化事业和文化产业**。
+
+### 第十一章 以保障和改善民生为重点加强社会建设
+
+46.保障和改善民生：
+
+| 保障和改善民生                               | 地位     |
+| -------------------------------------------- | -------- |
+| 尽力而为、量力而行                           | 重要方针 |
+| 坚守底线、突出重点、完善制度、引导预期       | 工作思路 |
+| 让所有劳动者在推动发展中分享发展成果         | 重要原则 |
+| 解决人民群众最关心、最直接、最现实的利益问题 | 重中之重 |
+
+47.**收入分配**是**民生之源**，是**改善民生、实现发展成果由人民共享**的**最重要最直接的方式**。
+
+48.**分配制度**是**促进共同富裕的基础性制度**。
+
+49.**健全和完善社会保障体系**是新时代加强社会建设的重要**着力点**。
+
+50.社会治理理念：共建共治共享
+
+| 社会治理理念 | 内容                                                         | 是社会治理的 |
+| ------------ | ------------------------------------------------------------ | ------------ |
+| 共建         | 共同参与社会建设，要求突出制度和体系建设的基础性、战略性地位 | 基础         |
+| 共治         | 共同参与社会治理，要求梳理大社会观、大治理观，打造全民参与的开放治理体系 | 关键         |
+| 共享         | 共同享有社会治理成功，要求社会治理的成效更多更公平惠及全体人民 | 目标         |
+
+### 第十二章 建设社会主义生态文明
+
+51.**生态环境问题归根到底**是**经济发展方式和生活方式问题**。
+
+52.解决生态环境问题的**治本之策**是：**绿色低碳发展**
+
+### 第十三章 维护和塑造国家安全
+
+53.**国家安全**是民主复兴的**根基**，**社会稳定**是国家强盛的**前提**。
+
+54.总体国家安全观：
+
+| 总体国家安全观           | 地位 |
+| ------------------------ | ---- |
+| 人民安全                 | 宗旨 |
+| 政治安全                 | 根本 |
+| 经济安全                 | 基础 |
+| 军事、科技文化、社会安全 | 保障 |
+| 国际安全                 | 依托 |
+
+55.构建**新发展格局**的**重要前提和保障**：**牢牢守住安全发展这条底线**。
+
+56.政治安全、人民安全、国家利益至上三者统一
+
+| 三者统一起来 | 地位                                   |
+| ------------ | -------------------------------------- |
+| 政治安全     | 维护人民安全和国家利益的**根本保证**   |
+| 人民安全     | 中心地位                               |
+| 国家利益至上 | 实现政治安全和人民安全的**要求和原则** |
+
+57.**构建统筹各领域安全**的新安全格局的**主阵地、主战场**是**维护重点领域国家安全**。
+
+### 第十四章 建设巩固国防和强大人民军队
+
+58.习近平强军思想
+
+| 习近平强军思想         | 地位                       |
+| ---------------------- | -------------------------- |
+| 军民融合发展           | 兴国之举、强军之策         |
+| 党对人民军队的绝对领导 | 人民军队建军之本、强军之魂 |
+| 依法治军               | 建军治军基本方式           |
+| 作风优良               | 我军鲜明特色和政治优势     |
+
+59.强军目标十二字：**听党指挥、能打胜战、作风优良**，是加强军队建设的**聚焦点和着力点**。
+
+| 强军目标 | 地位 | 内容                                                         |
+| -------- | ---- | ------------------------------------------------------------ |
+| 听党指挥 | 灵魂 | 决定军队建设的**政治方向**                                   |
+| 能打胜战 | 核心 | 反应军队的根本职能和军队建设的**根本指向**                   |
+| 作风优良 | 保证 | 关系军队的性质、宗旨、本色，是人民军队的**鲜明特色**和**政治优势** |
+
+60.**军委主席负责制**是坚持**党对人民军队绝对领导**的**根本制度和根本实现形式**，在党领导军队的一整套制度体系中处于最高层次，居于统领地位。
+
+### 第十五章 坚持“一国两制”和推进祖国完全统一
+
+61.“一国两制”方针的**最高原则**是：**维护国家主权、安全、发展利益**。
+
+62.新时代党解决台湾问题的总体方略：
+
+| 总体方略                                 | 地位     |
+| ---------------------------------------- | -------- |
+| 坚持在中华民族伟大复兴进程中推进祖国统一 | 历史方位 |
+| 坚持在大陆发展进步基础上解决台湾问题     | 战略思维 |
+| 坚持推动两岸关系和平发展、融合发展       | 实践途径 |
+| 坚持一个中国原则和“九二共识”             | 政治基础 |
+
+62.新时代党解决台湾问题的总体方略（其二）：
+
+| 总体方略                       | 地位     |
+| ------------------------------ | -------- |
+| 坚持团结台湾同胞、争取台湾民心 | 根本动力 |
+| 坚持粉碎“台独”分裂图谋         | 必然要求 |
+| 坚持反对外部势力干涉           | 外部条件 |
+| 坚持绝不承诺放弃使用武力       | 战略支撑 |
+
+### 第十六章 中国特色大国外交和推动构建人类命运共同体
+
+63.中国特色大国外交牢牢把握的**主线**是：**服务民主复兴、促进人类进步**。
+
+64.我国始终将周边置于外交全局的首要位置，秉持的**周边外交理念**是：**亲诚惠容**
+
+65.我国对外工作的**出发点和落脚点**：**维护国家主权、安全、发展利益**。（除这个外，大部分出发点和落脚点都和人民有关）
+
+### 第十七章 全面从严治党
+
+66.党的建设的一贯要求和根本方针：**党要管党、从严治党**
+
+67.**政治建设**作为**统领**，把政治建设纳入**党的建设总体布局**并**摆在首位**。
+
+68.**党内政治生活**的**首要任务**——**加强思想教育和理论武装**。
+
+​      **党内政治建设**的**首要任务**——**保证全党服从中央，维护党中央权威和集中统一领导**。
+
+69.发挥党的政治建设的统领性作用，必须把准政治方向、站稳政治立场、营造良好政治生态、提高政治能力。
+
+70.**加强纪律建设**是**全面从严治党**的**治本之策**。
+
+71.**思想建设**是**党的基础性建设**。
+
+72.贯彻新时代党的组织路线的**重点**是：**严密党的组织体系**
+
+​      贯彻新时代党的组织路线的**关键**是：**建设高素质专业化干部队伍**
+
+73.**最彻底**的**自我革命**：**反腐败**
+
+74.中国共产党区别于其他政党的显著标志，也是**我们党最大优势、最鲜明的品格**：**勇于自我革命**
+
+75.**标本兼治**是新时代推进反腐败斗争的**鲜明特征**。
+
+76.**反腐倡廉**的**核心**是：**制度制约和监督权力**
+
