--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1173,7 +1173,7 @@
 
 ### 第七章 “三个代表”重要思想
 
-43.要正确认识和处理**改革、发展、稳定**的关系。改革是**动力**，发展是**目的**，稳定是**前提**。要把**改革的力度、发展的速度和社会可承受的程度统一起来**，**把不断改善人民生活作为处理改革、发展、稳定关系的重要<u>结合点</u>**。
+43.要正确认识和处理**改革、发展、稳定**的关系（是我国改革开放的一条重要经验）。改革是**动力**，发展是**目的**，稳定是**前提**。要把**改革的力度、发展的速度和社会可承受的程度统一起来**，**把不断改善人民生活作为处理改革、发展、稳定关系的重要<u>结合点</u>**。
 
 44.公有制和公有制的实现形式是两个不同层次的问题。**公有制的实现形式是指资产或资本的组织形式和经营方式**。
 
@@ -1301,6 +1301,8 @@
 
 **改革开放**是**坚持发展中国特色社会主义**的**必由之路**
 
+05.中国式现代化，**深深根植于**中华优秀传统文化，**体现**科学社会主义的先进本质，**借鉴吸收**一切人类优秀文明成果，**代表**人类文明进步的发展发现，**是一种全新的人类文明形态**。
+
 ### 第三章 坚持党的全面领导
 
 12.中国特色社会主义的最本质特征：**中国共产党领导**
@@ -1309,6 +1311,12 @@
 
 14.党的领导的最高原则：**党中央集中统一领导**
 
+06.中国特色社会主义之所以是社会主义，**究其根本就在于坚持科学社会主义基本原则，在于坚持中国共产党的领导**。（正好从中国特色和社会主义两方面回答）
+
+07.党的领导是**全面的、系统的、整体的**，并不是说党组织包揽包办一切、事无巨细什么都去管，而是在各级各种组织中发挥领导核心作用，既善于总揽全局，又善于协调各方。
+
+08.党的领导制度是我国的**根本领导制度**。
+
 ### 第四章 坚持以人民为中心
 
 15.我们党做好**一切工作和价值取向的根本标准**：**让群众满意**
@@ -1316,6 +1324,8 @@
 16.**发展**的**出发点和落脚点**是：**满足人民对美好生活的新期待**
 
 17.**现代化**的**最终目标**是实现：**人自由而全面的发展**
+
+09.
 
 ### 第五章 全面深化改革
 
@@ -1331,6 +1341,19 @@
 | 重要领域和关键环节改革 | 突破口 |
 
 20.**摸着石头过河**是**富有中国特色、符合中国国情的改革方法**
+
+010.全面建成小康社会是实现中华民族伟大复兴中国梦的**关键一步**。
+
+011.改革开放是我们党的一次**伟大觉醒**，是决定当代中国命运的**关键一招**，也是决定实现“两个一百年”奋斗目标、实现中华民族伟大复兴的**关键一招**。
+
+012.党的**十一届三中全会**，**开启了改革开放和社会主义现代化建设新时期**。
+
+013.改革开放永无止境（只有进行时、没有完成时）：
+
+* 是**社会基本矛盾运动规律的深刻反映**
+* 是**总结社会主义实践经验得出的重要结论**
+* 是**推进党和人民事业发展的必然要求**
+* 是**历史唯物主义态度**
 
 ### 第六章 推动高质量发展
 
@@ -1564,6 +1587,8 @@
 73.**最彻底**的**自我革命**：**反腐败**
 
 74.中国共产党区别于其他政党的显著标志，也是**我们党最大优势、最鲜明的品格**：**勇于自我革命**
+
+​      **人民立场**也是我们**党区别于其他政党的显著标志**。
 
 75.**标本兼治**是新时代推进反腐败斗争的**鲜明特征**。
 
