--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1203,7 +1203,7 @@
 
 48.坚持中国特色社会主义政治发展道路，**最根本的是要坚持党的领导、人民当家作主、依法治国有机统一**。
 
-其中，**党的领导**是人民当家作主和依法治国的**根本保证**，**人民当家作主**是社会主义民主政治的**本质和核心**，**依法治国**是党领导人民治理国家的**基本方略**。
+其中，**党的领导**是**人民当家作主和依法治国**的**根本保证**，**人民当家作主**是社会主义民主政治的**本质和核心**，**依法治国**是党领导人民治理国家的**基本方略**。
 
 044.坚持**以人为本**，就要：
 
@@ -1407,6 +1407,17 @@
 | 实施区域重大战略     | 京津冀协同发展、长江经济带发展、粤港澳大湾区建设、长三角一体化发展、黄河流域生态保护和高质量发展、高标准高质量建设雄安新区、推动成渝地区双城经济圈建设 |
 | 实施主体功能区战略   | 逐步形成城市化地区、农产品主产区、生态功能区三大空间格局     |
 
+014.**社会主义初级阶段**并**不是**所有国家实现社会主义现代化所**必须经历的阶段**，**新发展阶段**也一样。
+
+015.**国家安全**是民族复兴的根基，**社会稳定**是国家强盛的前提。
+
+016.全面实施乡村振兴战略要处理好的关系：
+
+1. 长期目标和短期目标的关系。
+2. **顶层设计**和**基层探索**的关系。
+3. 充分发挥**市场决定性作用**和**更好发挥政府作用**的关系。
+4. 增强群众获得感和适应发展阶段的关系。
+
 ### 第七章 社会主义现代化建设的教育、科技、人才战略
 
 32.建设教育强国
@@ -1426,6 +1437,10 @@
 
 35.**国家战略科技力量**是世界科技强国竞争的**着力点**。
 
+017.**实体经济**是发展经济的**着力点**。
+
+018.**自主创新**，就是从增强国家创新能力出发，加强**原始创新**、**集成创新**和**开放创新**。
+
 ### 第八章 发展全过程人民民主
 
 36.**坚定中国特色社会主义制度自信**，首先要**鉴定对中国特色社会主义政治制度的自信**。
@@ -1434,11 +1449,55 @@
 
 38.**新时代爱国统一战线的历史责任**是**促进中华儿女大团结**
 
+019.**民主**是**全人类共同价值**，是人类政治文明发展的成果。
+
+020.**全过程人民民主**是**全链条、全方位、全覆盖**的民主，是**最广泛、最真实、最管用**的民主。
+
+021.具有**鲜明中国特色的新型政党制度的内容**：“**共产党领导、多党派合作，共产党执政，多党派参政**。”
+
+022.中国共产党**处理与各民主党派关系的方针**：“长期共存、互相监督、肝胆相照、荣辱与共。”
+
+023.**统一战线**并**不用于**团结国际社会共同反对霸权主义、单边主义斗争。
+
+024.中华民族共同体意识：**休戚与共、荣辱与共、生死与共、命运与共**。
+
+025.加强和促进海内外中华儿女大团结，要辩证把握的关系是：
+
+1. 固守圆心和扩大共识的关系
+2. **潜绩和显绩**的关系
+3. 原则性和灵活性的关系
+4. **团结和斗争**的关系
+
 ### 第九章 全面依法治国
 
 39.坚持依宪治国、依宪执政，作为首要任务的是**全面贯彻实施宪法**。
 
 40.**全面依法治国**的**重点任务和主体工程**是**法治政府建设**
+
+026.中国特色社会主义法治道路的核心要义：
+
+1. 坚持党的领导（中特**最本质特征**，社会主义法治**最根本保证**）
+2. 坚持中国特色社会主义制度（中特法治体系的**根本制度基础**，全面推进依法治国的**根本制度保障**）
+3. 贯彻中国特色社会主义法治理论（中特法治体系的**理论指导和学理支撑**，全面推进依法治国的**行动指南**）
+
+027.坚持**依宪治国、依宪执政**，必须：
+
+1. 坚持党的领导地位不动摇
+2. 坚持我国国体、政体不动摇
+3. 全面贯彻实施宪法
+
+028.加快**建设法治中国**必须全面推进：（习近平法治思想主要内容——十一个坚持之一）
+
+1. 科学立法
+2. 严格执法
+3. 公正司法
+4. 全民守法
+
+029.法治中国建设的**工作布局**是：
+
+1. 坚持**依法治国、依法执政、依法行政**共同推进
+2. 坚持**法治国家、法治政府、法治社会**一体建设
+3. 坚持统筹推进**国内法治和涉外法治**
 
 ### 第十章 建设社会主义文化强国
 
@@ -1455,6 +1514,60 @@
 * 中华文明的**创新性**，从根本上决定了**中华民族守正不守旧、尊古不复古的进取精神**。
 
 45.满足人民精神文化需求、保障人民文化权益的**基本途径**是：**繁荣发展文化事业和文化产业**。
+
+030.中华民族创造的优秀传统文化
+
+1. 是民主的根基
+2. 是我们坚定文化自信的深厚基础
+
+031.**伟大建党精神**是中国共产党的精神之源。
+
+032.**意识形态**关乎旗帜、关乎道路、关乎国家政治安全、决定文化前进方向和发展道路。
+
+033.决定社会主义文化事业前途命运的关键：
+
+1. 坚持为人民服务
+2. 坚持为社会主义服务
+
+034.繁荣发展社会主义文化的**重要方针（双百方针）**，坚持：
+
+1. 百花齐放
+2. 百家争鸣
+
+035.创新创造是**文化的生命所在**，是**文化的本质特征**。
+
+036.**中华民族创造的优秀传统文化**是我们区别于其他国家和民族的**根本特征**。
+
+037.新时代新的文化使命，是在新的起点上：
+
+1. 继续推动文化繁荣
+2. 建设文化强国
+3. 建设中华民族现代文明
+
+038.文艺工作者的神圣职责：**弘扬中国精神、传播中国价值、凝聚中国力量**。
+
+039.**习近平新时代中国特色社会主义思想**是**全党全国各族人民团结奋斗的共同思想基础**。
+
+040.**创新性**从根本上决定了中华民族：
+
+1. 守正不守旧、尊古不复古的进取精神
+2. 不惧新挑战、勇于接受新事物的无畏品格
+
+041.中华文明的**连续性**从根本上决定了中华民族必然走自己的路。
+
+042.中华文明在长期历史演进中形成多元一体的格局，是**统一性**的体现。
+
+043.中华民族**最基本的文化基因**：（干扰项：与国际接轨）
+
+1. 同当代中国相适应
+2. 同现代社会相协调
+3. 同现实文化相融通
+
+044.在新的历史起点上继续**推动文化繁荣、建设文化强国、建设中华民族现代文明**，要（措施）：
+
+1. 坚定文化自信
+2. 秉持开放包容
+3. 坚持守正创新
 
 ### 第十一章 以保障和改善民生为重点加强社会建设
 
@@ -1481,15 +1594,34 @@
 | 共治         | 共同参与社会治理，要求梳理大社会观、大治理观，打造全民参与的开放治理体系 | 关键         |
 | 共享         | 共同享有社会治理成功，要求社会治理的成效更多更公平惠及全体人民 | 目标         |
 
+045.**保障和改善民生的重要原则**：
+
+1. 坚持人人尽责、人人享有
+2. 让所有劳动者在推动发展中分享发展成果
+
+046.保障和改善民生的**重要前提**：正确把握民生和发展的关系
+
+047.保障和改善民生的**重要方针**：坚持尽力而为、量力而行
+
+048.**就业**是**最基本的民生**
+
 ### 第十二章 建设社会主义生态文明
 
 51.**生态环境问题归根到底**是**经济发展方式和生活方式问题**。
 
 52.解决生态环境问题的**治本之策**是：**绿色低碳发展**
 
+049.我们生态环境保护结构性、根源性、趋势性压力**尚未**根本缓解，生态文明建设仍处于压力叠加、负重前行的关键期。
+
+050.强化国土空间规划和用途管控，，划定的**三条控制线**以及各类海域保护线。
+
+1. 生态保护红线
+2. 永久基本农田
+3. 城镇开发边界
+
 ### 第十三章 维护和塑造国家安全
 
-53.**国家安全**是民主复兴的**根基**，**社会稳定**是国家强盛的**前提**。
+53.**国家安全**是民主复兴的**根基**，**社会稳定**是国家强盛的**前提**。**科技自立自强**是国家**强盛之基、安全之要**。
 
 54.总体国家安全观：
 
@@ -1513,6 +1645,14 @@
 
 57.**构建统筹各领域安全**的新安全格局的**主阵地、主战场**是**维护重点领域国家安全**。
 
+051.**国土安全**是立国之基，维护国土安全属于**维护重点领域国家安全**的内容。
+
+052.**维护政治安全**的主要内容：
+
+1. 维护政权安全
+2. 维护制度安全
+3. 维护意识形态安全
+
 ### 第十四章 建设巩固国防和强大人民军队
 
 58.习近平强军思想
@@ -1532,7 +1672,24 @@
 | 能打胜战 | 核心 | 反应军队的根本职能和军队建设的**根本指向**                   |
 | 作风优良 | 保证 | 关系军队的性质、宗旨、本色，是人民军队的**鲜明特色**和**政治优势** |
 
+**听党指挥**是人民军队建设的**首要**和**命脉所在**。
+
 60.**军委主席负责制**是坚持**党对人民军队绝对领导**的**根本制度和根本实现形式**，在党领导军队的一整套制度体系中处于最高层次，居于统领地位。
+
+053.**军事**属于**硬实力**，**文化、价值观念**属于**软实力**。当代中国价值观念要走向世界，要下大力气加强文化软实力建设。
+
+054.到2035年我国要基本实现国防和军队现代化，这一步关键是实现：
+
+1. 军事理论现代化
+2. 军队组织形态现代化
+3. 军事人员现代化
+4. 武器装备现代化
+
+055.坚持党对人民军队的绝对领导
+
+1. 是马克思主义建党建军的一条基本原则
+2. 是人民军队永远不变的军魂
+3. 必须有一整套制度作保证
 
 ### 第十五章 坚持“一国两制”和推进祖国完全统一
 
@@ -1556,6 +1713,13 @@
 | 坚持反对外部势力干涉           | 外部条件 |
 | 坚持绝不承诺放弃使用武力       | 战略支撑 |
 
+056.“一国两制”的**根本宗旨**是：
+
+1. 维护国家主权、安全、发展利益
+2. 保持香港、澳门长期繁荣稳定
+
+057.中央授予多少权利，特别行政区就享有多少权利，不存在所谓**“剩余权利”**。
+
 ### 第十六章 中国特色大国外交和推动构建人类命运共同体
 
 63.中国特色大国外交牢牢把握的**主线**是：**服务民主复兴、促进人类进步**。
@@ -1563,6 +1727,28 @@
 64.我国始终将周边置于外交全局的首要位置，秉持的**周边外交理念**是：**亲诚惠容**
 
 65.我国对外工作的**出发点和落脚点**：**维护国家主权、安全、发展利益**。（除这个外，大部分出发点和落脚点都和人民有关）
+
+058.新时代**对外工作**的**总目标**：**推动构建人类命运共同体**
+
+059.新时代中国外交的**基本原则**：走和平发展道路
+
+060.推动**构建新型国际关系**，秉持的原则：
+
+1. 互相尊重
+2. 公平正义
+3. 合作共赢
+
+061.中国**要构建的大国关系格局**：
+
+1. 和平共处
+2. 总体稳定
+3. 均衡发展
+
+062.我国构**建新型政党关系**所秉持的理念：
+
+1. 求同存异
+2. 互相尊重
+3. 互学互鉴
 
 ### 第十七章 全面从严治党
 
@@ -1594,3 +1780,30 @@
 
 76.**反腐倡廉**的**核心**是：**制度制约和监督权力**
 
+063.全面从严治党
+
+1. 核心是加强党的领导
+2. 基础在全面
+3. 关键在严
+4. 要害在治
+
+064.要落实新时代党的建设总要求，把全的要求、严的基调、治的理念**落实到全面从严治党全过程**，坚持
+
+1. 内容上全覆盖
+2. 对象上全覆盖
+3. 责任上全链条
+4. 制度上全贯通
+
+065.**自我革命**的**重要途径**：
+
+1. 自我净化
+2. 自我完善
+3. 自我革新
+4. 自我提高
+
+066.要发展基层民主，保障人民依法直接行使民主权利，实现
+
+1. 自我管理
+2. 自我服务
+3. 自我教育
+4. 自我监督
