--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1752,7 +1752,7 @@
 
 ### 第十七章 全面从严治党
 
-66.党的建设的一贯要求和根本方针：**党要管党、从严治党**
+66.党的建设的**一贯要求和根本方针**：**党要管党、从严治党**
 
 67.**政治建设**作为**统领**，把政治建设纳入**党的建设总体布局**并**摆在首位**。
 
@@ -1760,7 +1760,7 @@
 
 ​      **党内政治建设**的**首要任务**——**保证全党服从中央，维护党中央权威和集中统一领导**。
 
-69.发挥党的政治建设的统领性作用，必须把准政治方向、站稳政治立场、营造良好政治生态、提高政治能力。
+69.发挥党的**政治建设**的**统领性作用**，必须把准政治方向、站稳政治立场、营造良好政治生态、提高政治能力。
 
 70.**加强纪律建设**是**全面从严治党**的**治本之策**。
 
@@ -1780,14 +1780,14 @@
 
 76.**反腐倡廉**的**核心**是：**制度制约和监督权力**
 
-063.全面从严治党
+063.全面从严治党：
 
 1. 核心是加强党的领导
 2. 基础在全面
 3. 关键在严
 4. 要害在治
 
-064.要落实新时代党的建设总要求，把全的要求、严的基调、治的理念**落实到全面从严治党全过程**，坚持
+064.要落实新时代**党的建设总要求**，把全的要求、严的基调、治的理念**落实到全面从严治党全过程**，坚持
 
 1. 内容上全覆盖
 2. 对象上全覆盖
@@ -1807,3 +1807,9 @@
 2. 自我服务
 3. 自我教育
 4. 自我监督
+
+
+
+## 中国近现代史纲要
+
+### 第一章 进入近代后中华民族的磨难与抗争
