:memo:中国近现代史纲要 前五章

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1813,3 +1813,160 @@
 ## 中国近现代史纲要
 
 ### 第一章 进入近代后中华民族的磨难与抗争
+
+1.1842年中英《南京条约》是清朝政府同外国侵略者签订的**第一个不平等条约**。《天津条约》签订于1858年，《马关条约》签订于1895年。
+
+2.**无产阶级（工人阶级）**是中国沦为半殖民地半封建社会的过程中最早出现的一个新的社会阶级。
+
+3.**太平天国运动**是中国旧式农民战争的最高峰。
+
+4.中国近代史上中国人民第一次大规模的反侵略武装斗争是**三元里人民的抗英斗争**。
+
+5.《资政新篇》主张在中国发展资本主义，实际上要进行政治、经济、文化制度的改革。
+
+《海国图志》仅仅主张向西方学习军事和科学技术。二者共同点是“**向西方学习**”。
+
+6.“**师夷长技以制夷**”是魏源在1843年《海国图志》中提出的。
+
+“**睁眼看世界**”是鸦片战争（1840年）以后先进的中国人提出的
+
+“**自强**”“求富”是洋务派在洋务运动（1861年开始）中提出的
+
+7.率先发出“**振兴中华**”呐喊的是**孙中山**。
+
+### 第二章 不同社会力量对国家出路的早期探索
+
+8.**“自强”“求富”**是洋务运动的**目标**。
+
+9.**“中学为体，西学为用”**是洋务派兴办洋务事业的**指导思想**。
+
+10.采取**官督商办**的民用企业，虽然受官僚控制，发展受到很大限制，但基本上是**资本主义**性质的近代企业。
+
+11.**近代教育**开始于**洋务运动**。
+
+12.近代中国资产阶级思想与封建主义思想的**第一次正面交锋**是：**维新派与守旧派的论战**。第二次交锋是**革命派与改良派之间的论战**，论证焦点是**要不要以革命手段推翻清王朝**。
+
+13.维新派认为**兴民权、设议院，实行君主立宪制度**才是当时中国理想的政治方案。
+
+### 第三章 辛亥革命与君主专制制度的终结
+
+14.
+
+* **中华革命党**于1914年由孙中山在日本组建，坚持反袁武装斗争
+* **光复会**于1904年11月正式成立于上海
+* 1905年光复会与**兴中会**、**华兴会**联合成立**中国同盟会**，但仍有部分会员独立活动
+
+* **中国同盟会**是近代中国**第一个领导资产阶级革命的全国性政党**。
+
+15.三民主义（没有民主主义的提法）：
+
+| 三民主义 | 内容               |
+| -------- | ------------------ |
+| 民族主义 | 驱除鞑虏，恢复中华 |
+| 民权主义 | 创立民国           |
+| 民生主义 | 平均地权           |
+
+* 民族主义，即**民主革命**，包括“驱除鞑虏，恢复中华”两项内容。
+  1. 一是要以革命手段推翻清朝政府，改变它一贯推行的民族歧视和民族压迫政策；
+  2. 二是建立中华民族“独立的国家”。孙中山指出，民族主义不是简单的排满，不是针对一切满人，而是要**结束清政府的专制统治以及媚外政策**（没有明确把汉族军阀、官僚、地主作为革命对象，从而给了这部分人后来从内外部破坏革命的可乘之机）。
+
+民族主义**突出了反对帝国主义的内容**，同时**主张国内各民族一律平等**。
+
+* 民权主义的内容是“创立民国”，即推翻封建君主专制制度，建立资产阶级民主共和国。这就是孙中山所说的**政治革命**。
+
+* 民生主义即**社会革命**，指的是“平均地权”，也就是核定全国土地的地价，其现有之地价，仍属原主；革命后的增价，则归国家，为国民共享。
+
+16.**拉开了**近代以来**中国发生的深刻社会变革序幕**的事件：**辛亥革命**
+
+17.《钦定宪法大纲》是清政府于1908年颁布；《中华民国约法》是1914年5月袁世凯公然撕毁《中华民国临时约法》后炮制的；《训政纲领》是1928年10月国民党中央常务会议通过的纲领性文件，实质是在中国实行国民党的一党专政。
+
+18.南京临时政府的《告友邦书》，试图用承认清政府与列强所订的一切不平等条约和清政府所欠的一切外债，来换取列强承认中华民国。**这是南京临时政府的局限性**。
+
+19.辛亥革命失败的原因**从根本上说**，是因为在帝国主义时代，**在半殖民地半封建的中国，资本主义的建国方案是行不通的**。
+
+20.资产阶级革命派的这些弱点、错误，从**根源**上讲，在于**中国民族资产阶级的软弱性和妥协性**。
+
+### 第四章 中国共产党成立和中国革命新局面
+
+21.新文化运动的倡导者**批判孔学**，是**为了给中国发展资本主义扫清障碍**。
+
+22.**五四运动**是中国革命的新阶段即**新民主主义革命阶段**的**开端**，发生在新文化运动之后。
+
+23.**工人阶级**是新民主主义革命的领导阶级，但不是主力军（民主革命的**主力军是农民**）
+
+24.五四运动表现了**反帝反封建的彻底性**
+
+25.**五四运动**促进了马克思主义在中国的传播，拉开了新民主主义革命的序幕，**标志着中国青年成为推动总共社会变革的急先锋**。
+
+26.1919年五四运动，提出“改造强盗世界，不认秘密外交，实行民族自决”和“另起炉灶，组织新政府”这样的口号，表明**中国人民对帝国主义的认识尽到了理性认识的认识阶段**。
+
+27.甲午战争后，中国人民的民族意识**开始普遍觉醒**。五四运动后，**中国人民和中华民族自鸦片战争以来第一次全面觉醒**。
+
+28.**五四精神**的核心是**爱国主义**。
+
+29.**李大钊发表《我的马克思主义观》**，标志着**马克思主义在中国进入比较系统的传播阶段**。
+
+30.早期马克思主义者队伍，主要是由**新文化运动的精神领袖**、**五四爱国运动的左翼骨干**和**一部分原中国同盟会会员、辛亥革命时期的活动家**三种人组成的。
+
+1. 李大钊、陈独秀属于先驱者和擎旗人
+2. 毛泽东等五四爱国运动的左翼骨干则是**主体部分**
+
+31.**中国二大**第一次明确提出了**反帝反封建的民主革命纲领**。
+
+32.**国民党一大的召开**，**标志着第一次国共合作的正式形成**。
+
+33.**孙中山的新三民主义**的政纲同**中国共产党在民主革命阶段的纲领**基本一致，因而**成为第一次国共合作的政治基础**。
+
+34.第一次国共合作是采取**党内合作**的形式。
+
+35.“**适乎世界之潮流，合乎人群之需要**”，指孙中山**提出了联俄、联共、扶助工农三大革命正常，对三民主义作了新的解释**。
+
+36.1925年5月，以**五卅运动**（英、日军警制造枪杀中国民众的五卅惨案）为起点，掀起了全国范围的大革命高潮。
+
+37.1925年6月，**省港大罢工**前后坚持了16个月之久，是**中国工人运动史上持续时间最长的一次政治大罢工**
+
+38.1922年1月香港海员罢工到1923年2月京汉铁路工人罢工，掀起了**中国工人运动的第一个高潮**。
+
+39.大革命失败，主要指**反帝反封建的革命任务没有完成**。
+
+### 第五章 中国革命的新道路
+
+40.1927年8月7日，中共中央在汉口召开的**八七会议**确定的**方针**是**土地革命和武装起义**，这是**由大革命失败到土地革命战争兴起**的历史性转变。
+
+41.**八七会议**还提出了“**整顿改编自己的队伍，纠正过去严重的错误，而找着新的道路”的任务**。
+
+42.**秋收起义**中起义军第一次公开打出了**“工农革命军”的旗帜**。
+
+**南昌起义**中打的是**“国民革命军”**的旗帜
+
+43.**从进攻大城市转为向农村进军**，是中国革命具有决定意义的**新起点**。
+
+44.**党对军队的绝对领导**的根本原则和制度，**发端**于**南昌起义**，**奠基**于**三湾改变**，**定型**于**古田会议**，是人民军队完全区别于一切旧军队的政治特质和根本优势。
+
+45.**《反对本本主义》**阐明了**坚持唯物辩证主义的思想路线**即坚持**理论与实际相结合**的原则的极端重要性，提出了“没有调查，没有发言权”和“中国革命斗争的胜利要靠中国同志了解中国情况”的重要思想，表现力**毛泽东开辟新道路、创造新理论的革命首创精神**。
+
+46.1929年12月，古田会议在福建上杭县古田村召开，其中最重要的是**关于纠正党内错误思想的决议案，确立了思想建党、政治建军原则**。
+
+47.在新民主主义革命时期，中国共产党在不同阶段建立了**不同性质的革命政权**：
+
+| 时期             | 革命政权的性质                                           |
+| ---------------- | -------------------------------------------------------- |
+| 土地革命战争时期 | （苏维埃政权）工农民主专政                               |
+| 抗日战争时期     | 抗日民族统一战线性质、一切赞成抗日又赞成民主的人们的政权 |
+| 解放战争时期     | 各革命阶级的联合专政                                     |
+| 新中国成立初期   | 人民民主专政                                             |
+
+48.20世纪30年代前、中期，中国共产党内屡次出现严重的“左”倾错误，其原因主要在于：中国共产党还**不善于把马克思列宁主义与中国实际全面地、正确地结合起来**。
+
+49.**遵义会议**的鲜明特点是**坚持真理、修正错误**，遵义会议**开启了中国共产党独立自主解决中国革命实际问题的新阶段**，集中解决了在当时具有决定意义的**军事问题和组织问题**。
+
+50.毛泽东的著作：
+
+| 著作                              | 内容                                                         |
+| --------------------------------- | ------------------------------------------------------------ |
+| 《论反对日本帝国主义的策略》-1935 | 系统说明了党的**政治策略**上的诸问题                         |
+| 《中国革命战争的战略问题》-1936   | 总结土地革命战争中党内在军事问题上的争论，系统说明了有关**中国革命战争战略方面**的诸问题 |
+| 《论持久战》-1938                 |                                                              |
+| 《中国革命和中国共产党》-1939     |                                                              |
+
+第六章 中华民族的抗日战争
